Commit with test for Method Drive.

--- a/Car.Test/Car.Test.csproj
+++ b/Car.Test/Car.Test.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Cars\Cars.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="nunit.framework">
       <HintPath>..\..\..\..\..\..\Program Files\NUnit\nunit.framework.dll</HintPath>
     </Reference>
